fix: responsive-gap-property

--- a/polaris-react/src/components/Stack/Stack.scss
+++ b/polaris-react/src/components/Stack/Stack.scss
@@ -1,42 +1,14 @@
 @import '../../styles/common';
 
 .Stack {
+  @include responsive-props('stack', 'gap', 'gap');
   // stylelint-disable -- Polaris component custom properties
   --pc-stack-align: initial;
   --pc-stack-order: initial
-  --pc-stack-gap-xs: 0;
-  --pc-stack-gap-sm: var(--pc-stack-gap-xs);
-  --pc-stack-gap-md: var(--pc-stack-gap-sm);
-  --pc-stack-gap-lg: var(--pc-stack-gap-md);
-  --pc-stack-gap-xl: var(--pc-stack-gap-lg);
   // stylelint-enable
   display: flex;
-  // stylelint-disable-next-line -- local component custom property is required for flex direction
   flex-direction: var(--pc-stack-order);
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
   align-items: var(--pc-stack-align);
-  // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-  gap: var(--pc-stack-gap-xs);
-
-  @media #{$p-breakpoints-sm-up} {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    gap: var(--pc-stack-gap-sm);
-  }
-
-  @media #{$p-breakpoints-md-up} {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    gap: var(--pc-stack-gap-md);
-  }
-
-  @media #{$p-breakpoints-lg-up} {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    gap: var(--pc-stack-gap-lg);
-  }
-
-  @media #{$p-breakpoints-xl-up} {
-    // stylelint-disable-next-line -- generated by polaris-migrator DO NOT COPY
-    gap: var(--pc-stack-gap-xl);
-  }
 }
 
 .listReset {
